# avod

./: .gitignore  LICENSE  README.md  pyproject.toml
avod/: __init__.py  backbone.py  baselines.py  modulation_form_gating.py  multimodal_dataset.py
avod/data_split/: __init__.py  build_clip_level_split.py  clip_level_split.py
docs/: DATA_FORMAT.md
examples/: make_synthetic_data.py  run_smoke_test.py
scripts/: eval.py  train.py
