[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "avod"
version = "0.1.0"
description = "Profile-conditioned video–odor prediction"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "torch>=2.0.0",
  "numpy>=1.23.0",
  "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["avod*"]
